--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "firebase": "^9.23.0",
+    "firestore": "^1.1.6",
+    "framer-motion": "^10.12.16",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1"
   }
 }
